# chicken-Invaders

./: CMakeLists.txt  ChickenInvaders.pro  README.md  main.cpp  resources.qrc
src/: Game.cpp  Game.h
src/view/: Bullet.cpp  Bullet.h  Health.cpp  Health.h  Score.cpp  Score.h  SpaceShip.cpp  SpaceShip.h  chicken.cpp  chicken.h
